Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64071

Widevine stops working after Chrome 62 upgrade

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.6, 5.11.1
    • 5.7.1, 5.9.2
    • WebEngine
    • None
    • Archlinux, Gentoo
    • bd3687d2c5cc78e7571406471689b2d0fafbb1bf 987a2de5c39e66001d2754d6a06475c4098b703e

      I haven't investigated this myself yet, but various users reported that Widevine stopped working for them after upgrading from Chrome 61.0.3163.100 to 62.0.3202.62.

      Situation on Archlinux:

      • Chromium: has /usr/lib/chromium/libwidevinecdmadapter.so, updated to 62
      • qt5-webengine-widevine (AUR): has /usr/lib/qt/plugins/ppapi/libwidevinecdm.so and /usr/lib/qt/plugins/ppapi/libwidevinecdmadapter.so, still at 61
      • chromium-widevine (AUR): has /usr/lib/chromium/libwidevinecdm.so, at 1.4.8.1008 which I think corresponds to 61

      Situation on Gentoo:

      • www-plugins/chrome-binary-plugins: has /usr/lib64/chromium/libwidevinecdm.so and /usr/lib64/chromium/libwidevinecdmadapter.so plus symlinks with chromium-browser, updated to 62

      No matter how/if this gets fixed, I think QtWebEngine should probably prefer the /usr/lib/qt/plugins/ppapi/ path over Chromium's so an older version can be dropped in easily in situations like this?

        For Gerrit Dashboard: QTBUG-64071
        # Subject Branch Project Status CR V

            qt_webengine_team Qt WebEngine Team
            the compiler Florian Bruhin
            Votes:
            4 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes