Only add the first found widevine CDM

Otherwise Chromium will pick the last added, meaning we will use the
wrong one.

Task-number:  QTBUG-64071
Change-Id: Id5c939b6a5c70643ed047625c0cbb152dd8c7169
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
(cherry picked from commit bd3687d2c5cc78e7571406471689b2d0fafbb1bf)
Reviewed-by: Michael Brüning <michael.bruning@qt.io>